// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Logout /> rendering should render correctly 1`] = `
<div
  className="container content"
  id="logout"
>
  <div
    className="inner"
  >
    <div
      className="main-column w-100"
    >
      <div
        className="inner"
      >
        <h2>
          Logout successful
        </h2>
        <div
          className="links row"
        >
          <Link
            className="button partial"
            onClick={[Function]}
            to="/default/status"
          >
            Login again
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Logout /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="logout"
>
  <div
    className="inner"
  >
    <div
      className="main-column w-100"
    >
      <div
        className="inner"
      >
        <h2>
          LOGOUT_CONTENT
        </h2>
        <div
          className="links row"
        >
          <Link
            className="button partial"
            onClick={[Function]}
            to="/default/status"
          >
            LOGIN_AGAIN
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;
